# ppai-v3

./: .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  README.md  __init__.py  __main__.py  cli.py  pyproject.toml
compress/: __init__.py  calibrate.py  convert.py
core/: __init__.py  optimize.py  projection.py  spec.py
examples/: README.md  gpt2_verified_inference.py  verify_saved_trace.py
examples/qwen3b/: REPRODUCE.md  patch_qwen.py  setup.sh
integrations/: __init__.py  huggingface.py
layers/: __init__.py  linear.py
tests/: __init__.py  test_core.py  test_gpt2_realistic.py  test_pipeline.py
trace/: __init__.py  format.py  recorder.py  verifier.py
