[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppai-v3"
version = "0.3.0"
description = "Polygonal Projection for Auditable Inference — verifiable neural network inference via orthogonal factorization"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "Eldhose Mani", email = "eldhose.mani@hotmail.co.uk" },
]
keywords = ["AI", "verification", "inference", "compression", "neural-network", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
provider = ["torch>=2.0"]
hf = ["torch>=2.0", "transformers>=4.30"]
dev = ["torch>=2.0", "pytest>=7.0"]
all = ["torch>=2.0", "transformers>=4.30", "pytest>=7.0"]

[project.scripts]
ppai = "ppai_v3.cli:main"

[project.urls]
Repository = "https://github.com/eldhosemani/ppai"

[tool.setuptools.packages.find]
include = ["ppai_v3*"]

[tool.pytest.ini_options]
testpaths = ["ppai_v3/tests"]
